export interface League {
	_id?: string;
	name?: string;
	season?: string;
	category?: string;
	createdAt?: Date;
	updatedAt?: Date;
}
