@startuml
hide circle
skinparam classAttributeIconSize 0

' =====================
' CORE DOMAIN ENTITIES
' =====================

class User {
  +name
  +email
  +mobile
  +age
  +sex
  +address
  +birthDate
  +active
}

class League {
  +name
  +season
  +category
}

class Team {
  +name
  +shortName
  +homeCity
  +foundedYear
}

class Squad {
  +name
}

class TeamEvent {
  +title
  +type
  +opponent?
  +startTime
  +endTime
}

class EventParticipation {
  +status
  +note
  +createdAt
}

class Venue {
  +name
  +address
  +city
  +capacity
}

class Announcement {
  +title
  +content
  +createdAt
  +visibility
  +type
  +pinned
}

class Payment {
  +amount
  +status
  +dueDate
  +type
}

' =====================
' STRUCTURE
' =====================

Team "1" -- "1..*" Squad : consists of
League "1" -- "1..*" Squad : includes

' =====================
' ASSOCIATION CLASS
' =====================

User "1" -- "0..*" Squad : member of
associationClass Membership {
  +role
  +active
}

' =====================
' EVENTS
' =====================

Team "1" -- "0..*" TeamEvent : schedules
Venue "1" -- "0..*" TeamEvent : hosts

User "1" -- "0..*" TeamEvent : participates in
associationClass EventParticipation {
  +status
  +note
  +createdAt
}

' =====================
' COMMUNICATION & FINANCE
' =====================

User "1" -- "0..*" Announcement : authors
Team "1" -- "0..*" Announcement : publishes

User "1" -- "0..*" Payment : pays

@enduml